# VTrans3

./: .gitignore  1LinePerWordPair.cpp  1LinePerWordPair.h  3rdPersPlurClauseAllows1Obj_translation_rule.xml  CMakeLists.txt  English_test_sentences.txt  GetAndTestWord.cpp  GetAndTestWord.h  IO.cpp  IO.h  IO.hpp  I_UserInterface.hpp  MakeHelp.bat  ParseEnglish.cpp  ParseEnglish.h  ReadMe.txt  SentenceElement.h  StdAfx.cpp  StdAfx.h  Text.cpp  Text.h  Token.cpp  Token.h  Translate.cpp  Translate.h  UI.h  VTrans.clw  VTrans.dsp  VTrans.dsw  VTrans.plg  VTrans.rc  VTrans.sln  VTrans.vcproj  VTrans_main_config.xml  Vocabulary_attribute_definitions.xml  Word.cpp  Word.hpp  access_VTransDynLib.py  allWordsIn1SingleLine.cpp  build_Android_library_with_taka-no-me_android-cmake.sh  (+28 more)
IO/: 1LinePerWordPair.h  CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.hpp  FileAccessException.cpp  FileAccessException.hpp  GenerateXMLtreeFromParseTree.cpp  GenerateXMLtreeFromParseTree.hpp  IO.cpp  IO.hpp  MiniXMLconfigReader.cpp  MiniXMLconfigReader.hpp  ParseTree2XMLtreeTraverser.cpp  ParseTree2XMLtreeTraverser.hpp  TinyXMLconfigReader.cpp  TinyXMLconfigReader.hpp  UnknownGrammarPartNameException.cpp  UnknownGrammarPartNameException.hpp  allWordsIn1SingleLine.cpp  writeXML.cpp  writeXML.h
IO/MiniXML/: CMakeLists.txt  GrammarRuleFileReader.cpp  MainConfigFileReader.cpp  MainConfigFileReader.hpp  ReadMainConfigFile.cpp  ReadMainConfigFile.hpp  TranslationRuleFileReader.cpp  TranslationRuleFileReader.hpp  VocAttributeDefintionHandler.cpp
IO/configuration/: MainConfigFileReaderBase.cpp  MainConfigFileReaderBase.hpp
IO/dictionary/: DictionaryFileAccessException.cpp  DictionaryFileAccessException.hpp  DictionaryReaderBase.hpp  OpenDictFileException.cpp  TUchemnitzDictEngWord1stReader.hpp  TUchemnitzDictEngWord2LineNumberReader.cpp  TUchemnitzDictEngWord2LineNumberReader.hpp  TUchemnitzDictSeparatorChars.h  TUchemnitzDictionaryReader.cpp  TUchemnitzDictionaryReader.hpp  VTransDictFormatReader.cpp  word_class_characters.h
IO/rules/: TranslationRuleFileReaderBase.cpp  TranslationRuleFileReaderBase.hpp
src/: CMakeLists.txt  StdAfx.h  VTrans3allSrcFilesNeededToParse.cmake
src/Attributes/: CollectDictStatsThreadFuncParams.h  CollectDictionaryStatisticsStatus.hpp  EnglishWord.cpp  EnglishWord.hpp  GUIattributes.hpp  GermanWord.cpp  GermanWord.hpp  GrammarPartPointerAndConcatenationID.hpp  PositionString.cpp  PositionString.hpp  Text.cpp  Token.cpp  TranslationAndConsecutiveID.hpp  TranslationAndGrammarPart.hpp  TranslationResult.hpp  Word.cpp  Word.hpp
src/Controller/: ConfigurationHandler_type.hpp  ConsoleTranslationController.cpp  ConsoleTranslationController.hpp  CurrentStatus.hpp  TranslateControllerBaseReturnCodeDescriptons.cpp  TranslateControllerBaseReturnCodes.h  TranslationControllerBase.cpp  TranslationControllerBase.hpp  TranslationProcess.cpp  TranslationProcess.hpp  dictionary_type.hpp  thread_type.hpp
src/IO/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.hpp  FileAccessException.cpp  FileAccessException.hpp  GenerateXMLtreeFromParseTree.cpp  GenerateXMLtreeFromParseTree.hpp  ParseTree2XMLtreeTraverser.cpp  ParseTree2XMLtreeTraverser.hpp  TinyXMLconfigReader.cpp  writeXML.cpp  writeXML.h
src/MFC/: ChildFrm.h  GermanView.cpp  GermanView.h  SearchFormBar.cpp  StatusDialog.h  UnknownWordsBar.cpp  UnknownWordsBar.h  VTrans.cpp  VTrans.h  VTransDoc.h  VTransView.cpp  VTransView.h  WordDockingWindow.cpp  WordEditorBar.cpp  memdc.h
src/Parse/: DirectingLeavesInSingleIterationTraverser.cpp  DirectingLeavesInSingleIterationTraverser.hpp  DirectingLeavesMultipleIterTraverser.cpp  DuplicateParseTree.cpp  DuplicateParseTree.hpp  GrammarPart.cpp  GrammarPart.hpp  GrammarPartPointerAndParseLevel.hpp  GrammarRule.hpp  ParseByRise.cpp  ParseByRise.hpp  ParseByRise_BuildParseTree.cpp  ParseByRise_GenerateXMLtree.cpp  ParseByRise_GrammarRule.cpp  ParseTreeNode_ID_type.hpp
src/ParseTree/: DirectingLeavesInSingleIterationTraverser.cpp  DirectingLeavesInSingleIterationTraverser.hpp  DirectingLeavesMultipleIterTraverser.cpp  DirectingLeavesMultipleIterTraverser.hpp  DuplicateParseTree.cpp  DuplicateParseTree.hpp  KeepTrackOfCurrentParseTreePath.cpp  KeepTrackOfCurrentParseTreePath.hpp
src/Translate/: AddVocAndTranslDefinition.hpp  Condition.hpp  ConditionsAndTranslation.cpp  ConditionsAndTranslation.hpp  InsertIntoTreeTransverser.cpp  InsertIntoTreeTransverser.hpp  SetSameConsecutiveIDforLeaves.cpp  SetSameConsecutiveIDforLeaves.hpp  SummarizePersonIndex.cpp  SummarizePersonIndex.hpp  SyntaxTreePath.cpp  SyntaxTreePath.hpp  TestIfTranslationRuleApplies.cpp  TestIfTranslationRuleApplies.hpp  TransformTreeTraverser.cpp  TransformTreeTraverser.hpp  TransformationRule.cpp  TranslateParseByRiseTree.cpp  TranslateParseByRiseTree.hpp  TranslateTreeTraverser.cpp  TranslateTreeTraverser.hpp  TranslatedTreeTraverser.cpp  TranslatedTreeTraverser.hpp  TranslationRule.cpp  TranslationRule.hpp
src/UserInterface/: ConsoleUserInterface.cpp  ConsoleUserInterface.hpp  I_UserInterface.hpp
src/VocabularyInMainMem/: IVocabularyInMainMem.cpp  IVocabularyInMainMem.hpp  I_WordSearch.hpp  LetterArrayTree.cpp  VocabularyAndTranslation.cpp  VocabularyAndTranslation.hpp
src/Xerces/: CMakeLists.txt  ReadViaSAX2.cpp  SAX2GrammarRuleHandler.cpp  SAX2GrammarRuleHandler.hpp  SAX2MainConfigHandler.cpp  SAX2MainConfigHandler.hpp  SAX2TransformationRuleHandler.cpp  SAX2TransformationRuleHandler.hpp  SAX2TranslationRuleHandler.cpp  SAX2TranslationRuleHandler.hpp  SAX2VocAttributeDefintionHandler.cpp  SAX2VocAttributeDefintionHandler.hpp  SAX2configReader.cpp  SAX2configReader.hpp
src/bitmaps/: VT_icon.xpm  add_grammar_rules.xpm  info.xpm  (+16 more)
wxWidgets/: CMakeLists.txt  DrawGrammarPartAttributes.hpp  DrawParseTreeTraverser.cpp  DrawParseTreeTraverser.h  DrawParseTreeTraverser.hpp  VTransApp.cpp  VTransApp.hpp  user_interface_control_actions.h  wxHTMLfileOutput.cpp  wxHTMLfileOutput.hpp  wxMainframe.fbp  wxParseTreePanel.cpp  wxParseTreePanel.h  wxTextInputDlg.cpp  wxTextInputDlg.h  wxTextInputDlg.hpp
(+571 files in other folders)
